package Opgave2;

public class PaintCalculator {

    public double calculatePaint(double area, double coveragePerLiter) {
        return area / coveragePerLiter;
    }

}
