package Opgave2;

public interface Shape {

    public double getArea();

    public double getPerimeter();

    public String getName();

    public String getShapeName();



}
