package Opgave2;

public abstract class ShapeDetail {

    protected String name;

    public ShapeDetail(String name) {
        this.name = name;
    }

    public String getName() {
        return name;
    }


}
